force-app/main/default/objects/Product2/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <formula>If(ISPICKVAL(Item_Category__c, &apos;Level 1&apos;), 10 , 
			If(ISPICKVAL(Item_Category__c, &apos;Level 2&apos;), 20 ,
						If(ISPICKVAL(Item_Category__c, &apos;Level 3&apos;), 30 ,
									If(ISPICKVAL(Item_Category__c, &apos;Level 4&apos;), 40 , 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>