force-app/main/default/objects/Product2/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>